Support multi-language in content
Fix #650

Co-authored-by: mairouche <meidi.airouche@gmail.com>

diff --git c/blog/config/application.properties i/blog/config/application.properties
index 897a140d..d58013da 100644
--- c/blog/config/application.properties
+++ i/blog/config/application.properties
@@ -4,5 +4,6 @@ quarkus.web-bundler.dependencies.auto-import=all
 quarkus.default-locale=en
 quarkus.asciidoc.attributes.icons=font
 quarkus.asciidoc.attributes.source-highlighter=highlight.js
+quarkus.roq.site.defaultLanguage=fr
 site.slugify-files=false
 %dev.site.draft=true
\ No newline at end of file
diff --git c/blog/content/posts/2024-12-06-series/index.adoc i/blog/content/posts/2024-12-06-series/index.adoc
index 3f431a3e..8e316776 100644
--- c/blog/content/posts/2024-12-06-series/index.adoc
+++ i/blog/content/posts/2024-12-06-series/index.adoc
@@ -3,6 +3,8 @@ title: Do you want to publish a blog post series ?
 image: https://images.unsplash.com/photo-1621571029036-1573d2b1dc5c?q=80&w=3731&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 description: Make your blog posts part of a series.
 author: jtama
+lang: en
+translations: plugin-series
 tags: guide, cool-stuff
 date: 2024-12-06 09:00:00 +0200
 series: roq-plugins
diff --git c/blog/content/posts/2025-06-11-diagram/index.adoc i/blog/content/posts/2025-06-11-diagram/index_fr.adoc
similarity index 93%
rename from blog/content/posts/2025-06-11-diagram/index.adoc
rename to blog/content/posts/2025-06-11-diagram/index_fr.adoc
index 0da2114f..6c435b6b 100644
--- c/blog/content/posts/2025-06-11-diagram/index.adoc
+++ i/blog/content/posts/2025-06-11-diagram/index_fr.adoc
@@ -3,6 +3,8 @@ title: More diagram than you could have dreamed of.
 description: Leveraging Kroki.io to generate diagram from text
 image: https://images.unsplash.com/photo-1496112576525-8b31e9ce4872?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 tags:

--- a/blog/content/posts/2024-12-06-series/index.adoc
+++ b/blog/content/posts/2024-12-06-series/index.adoc
@@ -3,6 +3,8 @@ title: Do you want to publish a blog post series ?
 image: https://images.unsplash.com/photo-1621571029036-1573d2b1dc5c?q=80&w=3731&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 description: Make your blog posts part of a series.
 author: jtama
+lang: en
+translations: plugin-series
 tags: guide, cool-stuff
 date: 2024-12-06 09:00:00 +0200
 series: roq-plugins
