--- a/blog/content/posts/2025-06-11-diagram/index_fr.adoc
+++ b/blog/content/posts/2025-06-11-diagram/index_fr.adoc
@@ -3,6 +3,8 @@ title: More diagram than you could have dreamed of.
 description: Leveraging Kroki.io to generate diagram from text
 image: https://images.unsplash.com/photo-1496112576525-8b31e9ce4872?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 tags: plugin, frontmatter, guide, diagram
+lang: fr
+translation_id: tutu
 author: jtama
 ---
 
