--- a/blog/content/posts/2025-06-11-diagram/index_fr.adoc
+++ b/blog/content/posts/2025-06-11-diagram/index_fr.adoc
@@ -1,27 +1,27 @@
 ---
-title: More diagram than you could have dreamed of.
-description: Leveraging Kroki.io to generate diagram from text
+title: Plus de diagrammes que vous n'auriez jamais imaginé.
+description: Tirer parti de Kroki.io pour générer des diagrammes à partir de texte
 image: https://images.unsplash.com/photo-1496112576525-8b31e9ce4872?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 tags: plugin, frontmatter, guide, diagram
 lang: fr
-translation_id: tutu
+translations: tutu
 author: jtama
 ---
 
-As much as you love writing content in a textual format, you like to produce your diagram as code.
+Autant vous aimez écrire du contenu au format textuel, autant vous aimez produire vos diagrammes sous forme de code.
 
-But there are so many: _PlantUML_, _Ditaa_, _Mermaid_, _BPMN_ and so on and so forth.
+Mais il y en a tellement : _PlantUML_, _Ditaa_, _Mermaid_, _BPMN_ et ainsi de suite.
 
-Integrating all those formats would be a real pain.
+Intégrer tous ces formats serait une véritable douleur.
 
-Hopefully you don't have to, https://kroki.io/[*_Kroki.io_*] has already done it for you.
+Heureusement, vous n'avez pas à le faire, https://kroki.io/[*_Kroki.io_*] l'a déjà fait pour vous.
 
-A new plugin has been added to integrate its capability seamlessly to *ROQ*
+Un nouveau plugin a été ajouté pour intégrer ses capacités de manière transparente à *ROQ*.
 
-You can use it through an already deployed server or let the plugin make use of Quarkus dev services to do the job for you.
+Vous pouvez l'utiliser via un serveur déjà déployé ou laisser le plugin utiliser les services de développement Quarkus pour faire le travail à votre place.
 
 
 // FIXME when window runner has a container runtime available
-image::diag_sample.svg[Sample diagram that shows kroki usage]
+image::diag_sample.svg[Exemple de diagramme montrant l'utilisation de kroki]
 
-👉 Full documentation is available link:/docs/plugins/#plugin-diagram[here], let's diagram all the things!
+👉 La documentation complète est disponible link:/docs/plugins/#plugin-diagram[ici], faisons des diagrammes de tout !
