--- a/blog/content/docs/basics.adoc
+++ b/blog/content/docs/basics.adoc
@@ -75,7 +75,11 @@ NOTE: if you don't already have layouts and partials in your project, <<install-
 
 If you’re using a theme, you can take advantage of its layouts, but you’re also free to add your own. Layouts are built on a powerful inheritance system, allowing flexibility and customization.
 
+// https://excalidraw.com/#json=NMbfajh74vODDIkfujKt8,0M5Vbhdd3oN02Nn-dgcbiw
+image::roq-layouts.png[Roq - Layouts]
+
 TIP: When using a theme, you can create new layouts that extend the existing theme layouts or partially override them to better suit your needs. Learn more here: xref:advanced.adoc#overriding-theme[Overriding Theme].
+
 
 In this sample we will create a simple 3 steps inheritance layout. All below files should be located in the `templates/layouts/` directory.
 
@@ -255,7 +259,7 @@ TIP: There are different ways to link your pages as explained in the  link:{site
 
 You can use Qute to access site and pages data. For this use the `site` and `page` variables:
 
-* The `site` (link:{roqjavadocmodelurl}Site.html[javadoc,window=_blank]) variable allow to access site global info from any page, document, layout or partial.
+* The `site` (link:{roqjavadocmodelurl}model/Site.html[javadoc,window=_blank]) variable allow to access site global info from any page, document, layout or partial.
 +
 .Show attributes
 [%collapsible]
@@ -322,7 +326,7 @@ You can use Qute to access site and pages data. For this use the `site` and `pag
 |===
 ====
 
-* The `page` (link:{roqjavadocmodelurl}Page.html[javadoc,window=_blank]) variable is available in pages, documents, layouts, and partials. It contains the info for the page it is used from.
+* The `page` (link:{roqjavadocmodelurl}model/Page.html[javadoc,window=_blank]) variable is available in pages, documents, layouts, and partials. It contains the info for the page it is used from.
 +
 .Show attributes
 [%collapsible]
@@ -454,20 +458,68 @@ Can be access with `{cdi:foo.bar}` in any template.
 
 == Template Extensions
 
-The Qute templating language supports a concept called https://quarkus.io/guides/qute#template-extension-methods[template extension methods]. These methods allow us to add functional to types and expose it in our templates. Moving logic from the template to Java code gives us the ability to use a more robust language for more complex logic and makes the functionality more easily reusable,as well as keeping our templates clean. Roq has several built-in template extensions:
+The Qute templating language supports a concept called https://quarkus.io/guides/qute#template-extension-methods[template extension methods]. These methods allow us to add functional to types and expose it in our templates. Moving logic from the template to Java code gives us the ability to use a more robust language for more complex logic and makes the functionality more easily reusable,as well as keeping our templates clean. Roq has several built-in template extensions (link:{roqjavadocmodelurl}RoqTemplateExtension.html[javadoc,window=_blank]):
 
-[%header]
+[cols="1,2", options="header"]
 |===
-| Method Name | Parent Type  | Return Type | Parameters | Description
-| `asStrings` | `String` or `JsonArray` | `List<String` | | Returns a list of `String`s created by splitting the provided `String`, or converting the `JsonArray` to a `List`. An empty `List` is returned for objects of other types.
-| `collection` | `RoqCollections` | `RoqCollection`| `String key`| Returns the `RoqCollection` for `key`
-| `contentAbstract` | `Page` or `String` | `String` | `int limit` | Returns an abstract for the given `Page` or HTML content. A `Page` is rendered to HTML first, then all HTML is stripped away (see `stripHtml`) and the first `limit` words (default: 75) are returned.
-| `mimeType` | `String` | `String`  | | Returns the mimetype for the specified file. A `null` is returned for unrecognized or invalid file names/types.
-| `numberOfWords` | `String` | `long` | | Returns the number of words in the given String
-| `readTime` | `Page` | `long` | | Returns the estimated number of minutes to read the given page
-| `slugify` | `String` | `String` | | Applies Roq's slug formatting to the given string
-| `stripHtml` | `String` | `String` | | Strips all HTML tags from the given string, returning plain text
-| `wordLimit` | `String` | `String` | `int limit` | Returns the first `limit` words in the given text.
+| Usage in a Qute template | Description
+
+| ``text.numberOfWords``
+| Returns the number of words in the string
+
+| ``text.wordLimit(limit)``
+| Returns the text limited to `limit` words, adds "..." if truncated
+
+| ``text.slugify``
+| Returns a slugified version of the text
+
+| ``htmlContent.contentAbstract(limit)``
+| Returns the HTML content limited to `limit` words
+
+| ``htmlContent.stripHtml``
+| Returns the text with all HTML tags removed
+
+| ``page.readTime``
+| Returns the estimated reading time in minutes for the page content
+
+| ``page.contentAbstract``
+| Returns the first 75 words of the page content
+
+| ``page.contentAbstract(limit)``
+| Returns the page content limited to `limit` words
+
+| ``list.limit(n)``
+| Returns only the first `n` items of the list
+
+| ``list.randomise``
+| Returns the list in random order
+
+| ``list.reverse``
+| Returns the list in reverse order
+
+| ``collections.collection(key)``
+| Returns the collection for the given key
+
+| ``posts.filter(key, value)``
+| Returns only documents matching the front-matter key/value
+
+| ``posts.future``
+| Returns only documents dated in the future
+
+| ``posts.past``
+| Returns only documents dated in the past
+
+| ``posts.sortBy(key, reverse)``
+| Sorts documents by a front-matter key (string), optionally reversed
+
+| ``posts.sortByDate(reverse)``
+| Sorts documents by date, optionally reversed
+
+| ``field.asStrings``
+| Normalizes a front-matter field into a list of strings
+
+| ``fileName.mimeType``
+| Returns the MIME type based on the file name extension
 |===
 
 You can provide your own template extensions by adding a class to your projects `src/main/java` directory and annotating either class or the `public static` method with `@TemplateExtension`:
