--- a/blog/content/posts/2025-06-11-more-diagram-than-you-could-have-dreamed-of/index.adoc
+++ b/blog/content/posts/2025-06-11-more-diagram-than-you-could-have-dreamed-of/index.adoc
@@ -1,9 +1,10 @@
 ---
 title: More diagram than you could have dreamed of.
 description: Leveraging Kroki.io to generate diagram from text
-image: https://images.unsplash.com/photo-1496112576525-8b31e9ce4872?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+image: "https://images.unsplash.com/photo-1496112576525-8b31e9ce4872?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
 tags: plugin, frontmatter, guide, diagram
 author: jtama
+date: 2025-06-11
 ---
 
 As much as you love writing content in a textual format, you like to produce your diagram as code.
