--- a/blog/content/docs/themes.adoc
+++ b/blog/content/docs/themes.adoc
@@ -188,6 +188,6 @@ To use an alternate theme, create a stylesheet file in your project's `web/style
 
 ==== Custom Theme Colors
 
-You can also create your own custom color scheme by overriding the theme variables in your `style.css`.
+You can also create your own custom color scheme by overriding the theme variables in your `style.css` (link:https://github.com/quarkiverse/quarkus-roq/blob/main/roq-theme/resume/runtime/src/main/resources/web/_theme-emerald.css[See example,window=_blank])
 
 The theme uses Tailwind CSS v4 color palettes. Available colors include: `slate`, `gray`, `zinc`, `neutral`, `stone`, `red`, `orange`, `amber`, `yellow`, `lime`, `green`, `emerald`, `teal`, `cyan`, `sky`, `blue`, `indigo`, `violet`, `purple`, `fuchsia`, `pink`, and `rose`.
